--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".exam_prepa.ExamPrepaCalculatrice"
+            android:exported="true" />
+        <activity
+            android:name=".exam_prepa.ExamPrepMain"
+            android:exported="true" />
+        <activity
             android:name=".devoir.DetailsDevoirActivity"
             android:exported="false" />
         <activity
